[package]
name = "data-structures-and-algorithms"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["cargo"] }
rand = "0.9.2"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
prettytable-rs = "0.10"
plotters = { version = "0.3", optional = true }
gif = { version = "0.12", optional = true }
rayon = "1.8"

[dev-dependencies]
anyhow = "1"
criterion = "0.5"

[features]
default = []
gui = ["plotters", "gif"]
